config/token/postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: token-service-db
  namespace: registry-system
  labels:
    app: token-service-db
spec:
  ports:
    - port: 5432
  selector:
    app: token-service-db
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: token-service-db
  namespace: registry-system
  labels:
    app: token-service-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: token-service-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: token-service-db
    spec:
      containers:
        - image: postgres:10-alpine
          name: postgresql
          resources:
            limits:
              cpu: "200m"
              memory: "1Gi"
            requests:
              cpu: "100m"
              memory: "512Mi"
          ports:
            - containerPort: 5432
              name: postgresql
          volumeMounts:
            - name: postgresql
              mountPath: /var/lib/postgresql/data
              subPath: postgres
      volumes:
        - name: postgresql
          persistentVolumeClaim:
            claimName: token-service-db-pvc
