config/token/ingress-tpl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: token-service-ingress
  namespace: registry-system
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-shd
spec:
  rules:
    - host: auth.hyperregistry.__DOMAIN__
      http:
        paths:
          - backend:
              service:
                name: token-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - auth.hyperregistry.__DOMAIN__
      secretName: token-service
